[tool.poetry]
name = "repl_python3_DontGiveUp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
hangups = "^0.4.14"
nest-asyncio = "^1.5.1"
Flask = "^2.0.1"
praw = "^7.4.0"
asyncpraw = "^7.4.0"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
